--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/politicas.css">
+    <script src="/src/public/js/index.js"></script>
     <title>Login</title>
 </head>
 <body>
@@ -15,6 +16,11 @@
             <input type="email" placeholder="Correo Electronico">
             <input type="password" placeholder="Contraseña">
             <input type="password" placeholder="Confirmar Contraseña">
+            <select name="rol" id="listarol" placeholder="Seleccione un rol">
+                <option value="" ></option>
+                <option value="Administrador">Administrador</option>
+                <option value="Programador">Programador</option>
+            </select>
             
             <!-- Cuadro de consentimiento de tratamiento de datos -->
             <div class="consentimiento">
