--- a/src/views/views.historialAcceso.ejs
+++ b/src/views/views.historialAcceso.ejs
@@ -145,19 +145,16 @@
                             <div class="col-12 eib">
                                 <h1>Historial de Acceso</h1>
                                 <!-- barra de busqueda -->
-                                <form class="form">
-                                    <label for="search">
-                                        <input class="input" type="text" required="" placeholder="Buscar..." id="search">
-                                        <div class="fancy-bg"></div>
-                                        <div class="search">
-                                            <svg viewBox="0 0 24 24" aria-hidden="true" class="r-14j79pv r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-4wgw6l r-f727ji r-bnwqim r-1plcrui r-lrvibr">
-                                                <g>
-                                                    <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
-                                                </g>
-                                            </svg>
-                                        </div>
-                                    </label>
-                                </form>
+                                <div class="group">
+                                    <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
+                                        <g>
+                                            <path
+                                                d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z">
+                                            </path>
+                                        </g>
+                                    </svg>
+                                    <input placeholder="Buscar..." type="search" class="input">
+                                </div>
                             </div>
 
                         </div>
@@ -184,8 +181,8 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                               
-                               
+
+
                             </tr>
 
                             </tr>
@@ -196,10 +193,10 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                               
+
                             </tr>
 
-                           
+
                         </tbody>
                     </table>
                 </div>
@@ -240,20 +237,20 @@
         </div>
         <script>
             document.querySelectorAll('.btn-primary').forEach(button => {
-            button.addEventListener('click', () => {
-                const dropdownId = button.id.replace('button', 'dropdown');
-                const dropdown = document.getElementById(dropdownId);
-                dropdown.style.display = dropdown.style.display === 'none' ? 'flex' : 'none';
+                button.addEventListener('click', () => {
+                    const dropdownId = button.id.replace('button', 'dropdown');
+                    const dropdown = document.getElementById(dropdownId);
+                    dropdown.style.display = dropdown.style.display === 'none' ? 'flex' : 'none';
+                });
             });
-        });
-        
+
         </script>
-    
-    <script src="/js/botones.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+
+        <script src="/js/botones.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
