--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -60,14 +60,21 @@
                                     <td class="estado"><%= user.Estado %></td>
                                     <td>
                                         <div class="btn-group" role="group">
-                                            <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
+                                            <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom btn-action" data-bs-toggle="modal" data-bs-target="#permissionsModal">
                                                 <i class="fa-solid fa-key"></i>
+                                                <label for="">Editar permisos</label>
                                             </button>
-                                            <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
+                                            <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm btn-action">
                                                 <i class="fa-solid fa-pen"></i>
+                                                <label for="">Editar usuario</label>
                                             </button>
-                                            <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
+                                            <button style="background-color: black;" type="button" class="btn btn-delete btn-sm btn-action">
+                                                <i class="fa-solid fa-remove"></i>
+                                                <label for="">Revocar sesión</label>
+                                            </button>
+                                            <button style="background-color: red;" type="button" class="btn btn-delete btn-sm btn-action">
                                                 <i class="fa-solid fa-trash"></i>
+                                                <label for="">Eliminar usuario</label>
                                             </button>
                                         </div>
                                     </td>
@@ -201,7 +208,6 @@
     <input type="text" hidden value="<%= url %>" class="id">
 </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/dropdown-panel.js"></script>
     <script src="/js/panel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
