--- a/src/public/css/historialAcceso.css
+++ b/src/public/css/historialAcceso.css
@@ -62,7 +62,7 @@ th {
     line-height: 40px;
 }
 
-.device{
+.device {
     width: 50px;
 }
 
@@ -91,119 +91,65 @@ th {
     font-size: 15px;
 }
 
+.imgCel {
+    width: auto;
+    height: 34px;
+}
+
+/* td[scope="col"]{
+    text-align: center;
+} */
+
+
 /* header */
 
 
 /* barra de busqueda */
-.form{
-    --input-text-color: #000000;
-    --input-bg-color: #5c72f0bb;
-    --focus-input-bg-color: transparent;
-    --text-color: #ffffff;
-    --active-color: #1b9bee;
-    --width-of-input: 200px;
-    --inline-padding-of-input: 0.9em;
-    --gap: 0.9rem;
-  
-  }
-.eib{
+.eib {
     display: flex;
-    
+
 }
-/* form style */
-.form{
-    height: 8%;
-    font-size: 0.9rem;
+
+/* From Uiverse.io by alexruix */
+.group {
     display: flex;
-    margin-top: 10px;
-    gap: 0.5rem;
+    height: 70px;
     align-items: center;
-    justify-content: center;
-    width: var(--width-of-input);
     position: relative;
-    isolation: isolate;
+    width: 500px;
 }
 
-/* a fancy bg for showing background and border when focus. */
-.fancy-bg {
-    position: absolute;
-    width: 220%;
-    inset: 0;
-    background: var(--input-bg-color);
-    border-radius: 10px;
-    height: 90%;
-    z-index: -1;
-    pointer-events: none;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-
-/* label styling */
-label {
-    width: 100%;
-    padding: 0.8em;
-    height: 40px;
-    padding-inline: var(--inline-padding-of-input);
-    display: flex;
-    align-items: center;
-}
-
-.search {
-    position: absolute;
-}
-
-/* styling search-icon */
-.search {
-    fill: var(--text-color);
-    left: var(--inline-padding-of-input);
-}
-
-/* svg -- size */
-svg {
-    width: 18px;
-    display: block;
-}
-
-
-
-/* styling of input */
 .input {
-    color: var(--input-text-color);
-    width: 40000px;
-    margin-inline: min(2em, calc(var(--inline-padding-of-input) + var(--gap)));
-    background: none;
-    border: none;
-}
-
-.input:focus {
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    line-height: 28px;
+    padding: 0 1rem;
+    padding-left: 2.5rem;
+    border: 2px solid transparent;
+    border-radius: 8px;
     outline: none;
+    background-color: #5c72f0bb;
+    color: #000000;
+    transition: .3s ease;
 }
 
 .input::placeholder {
-    color: var(--text-color)
+    color: #ffffff;
 }
 
-/* input background change in focus */
-.input:focus~.fancy-bg {
-    border: 1px solid var(--active-color);
-    background: var(--focus-input-bg-color);
+.input:focus,
+input:hover {
+    outline: none;
+    border-color: #1E3DEA;
+    background-color: #ffffff;
+    box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
 }
 
-/* search icon color change in focus */
-.input:focus~.search {
-    fill: var(--active-color);
-}
-
-/* showing close button when typing */
-.input:valid~.close-btn {
-    opacity: 1;
-    visibility: visible;
-}
-
-/* this is for the default background in input,when selecting autofill options -- you can remove this code if you do not want to override the browser style.  */
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-    -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
-    -webkit-transition-delay: 9999s;
+.icon {
+    position: absolute;
+    left: 1rem;
+    fill: #4961E4;
+    width: 1rem;
+    height: 1rem;
 }
