--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -230,6 +230,37 @@ nav{
     background-color: #181a18;
 }
 
+/* MODAL DE EDITAR BLOQUEAR CUENTA */
+.modal-header {
+    background-color: #394DC0;
+}
+.modal-body,
+.modal-footer {
+    background-color: #D9D9D9;
+}
+.contador {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.resul {
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding: 0 10px;
+    width: 50px;
+    height: 50px;
+    margin: 30px;
+    text-align: center;
+}
+#max,
+#min {
+    font-size: 40px;
+    cursor: pointer;
+}
+.mas{
+    margin-left: 0px;
+}
 @media screen and (width <= 1010px) {
     .btn--azul, .btn--gris{
         margin-bottom: 15px;
