--- a/src/views/views.perfil.ejs
+++ b/src/views/views.perfil.ejs
@@ -59,7 +59,7 @@
                             Accesos
                             <i class='bx bxs-down-arrow'></i>
                         </button>
-                        <button class="btna btn--azul">Editar Cuentas Bloqueadas</button>
+                        <button class="btna btn--azul" data-bs-toggle="modal" data-bs-target="#exampleModal">Editar Cuentas Bloqueadas</button>
                     </div>
                     <div class="accesos" id="acceso">
                         <table class="table table-bordered border-dark">
@@ -90,11 +90,40 @@
             </div>
             
         </div>
-
+        
     </main>
+    <!-- INICIO MODAL -->
+        <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Configuración</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="text">
+                <p>Indica la cantidad de accesos incorrectos para bloquear la cuenta</p>
+            </div>
+            <div class="contador">
+                <i class='bx bx-minus-circle mas' id="min"></i>
+                <input type="text" class="resul" readonly>
+                <i class='bx bx-plus mas' id="max"></i>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Confirmar</button>
+          <button type="button" class="btn btn-secondary btn--can" data-bs-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+    <!-- FIN MODAL -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <script>
+    // ACA ES PARA ABRIR LAS NOTIFICACIONES
     const abrir = document.getElementById('abrir');
     const notificaciones = document.getElementById('notificaciones');
 
@@ -112,11 +141,29 @@
         notificaciones.classList.remove("active");
       }
     });
-
+// ABRIR LOS ACCESOS DE LA TABLA
 const acceso = document.getElementById('btna');
 const abriracceso = document.getElementById('acceso');
 acceso.addEventListener('click', () =>{
     abriracceso.classList.toggle('active')
 })
+
+// INCREMENTO Y DECREMENTO DE LOS ICONOS
+let contador = 0
+const max = document.getElementById('max');
+const min = document.getElementById('min');
+
+max.addEventListener('click', function (){
+    contador++;
+    document.querySelector('.resul').value = contador;
+})
+
+min.addEventListener('click', function (){
+    if(contador>0){
+        contador--;
+        document.querySelector('.resul').value = contador;
+    }
+})
+
 </script>
 </html>
