--- a/src/public/css/panel.css
+++ b/src/public/css/panel.css
@@ -1,9 +1,4 @@
-/* Archivo para montar carpeta en Git hub */
-* {
-  margin: 0;
-  padding: 0;
-}
-.dropdown-arrow {
+/* .dropdown-arrow {
     width: auto;
     height: 20px;
     position: relative;
@@ -24,12 +19,13 @@
 #admin-button, 
 #config-button {
     border-bottom: 2px solid rgba(0, 0, 0, 0.2); 
-}
+} */
 
 .aside {
-  background-color: #1E3DEA;
+  background-color: #1e3dea;
 }
-.btn {
+
+/* .btn {
   width: 100%;
   height: 52px;
   background-color: #4961E4;
@@ -38,38 +34,39 @@
 .admin-section {
   margin-top: auto;
   padding-bottom: 20px;
-}
-th{
-  background-color: #1E3DEA;
+} */
+th {
+  background-color: #1e3dea;
 }
 .header-row {
   align-items: center;
-  height: 60px; 
+  height: 60px;
 }
 .header-row h1 {
   margin: 0;
-  line-height: 60px; 
+  line-height: 60px;
 }
 .header-row .btn {
-  line-height: 40px; 
+  line-height: 40px;
 }
 .content {
-  padding-top: 20px; 
+  padding-top: 20px;
 }
+
 #settings-dropdown .btn,
 #users-dropdown .btn,
 #records-dropdown .btn,
 #access-dropdown .btn,
 #admin-dropdown .btn,
 #config-dropdown .btn {
-  line-height: 1; /* Ajusta la altura de línea para evitar cortes */
-  padding: 10px; /* Ajusta el padding si es necesario */
-  text-align: left; /* Asegura que el texto esté alineado a la izquierda */
+  line-height: 1;
+  padding: 10px; 
+  text-align: left;
 }
 
 .gbtn {
   width: 20%;
   height: 45px;
-  background-color: #4961E4;
+  background-color: #4961e4;
   font-size: 15px;
 }
