--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -6,7 +6,7 @@
     <title>Apex</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/permisos.css">
+    <!-- <link rel="stylesheet" href="/css/permisos.css"> -->
     <link rel="stylesheet" href="/css/panel.css">
 </head>
 <body>
@@ -24,12 +24,12 @@
                             <span class="text-start">Ajustes</span>
                             <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
                         </button>
+                        
                         <div id="settings-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto;">
                             <button class="btn btn-secondary text-start">Cuenta</button>
                             <button class="btn btn-secondary text-start">Plataforma</button>
                             <button class="btn btn-secondary text-start">Autenticación de dos factores</button>
                         </div>
-                
                         <!-- Usuarios Dropdown -->
                         <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="users-button">
                             <span class="text-start">Usuarios</span>
@@ -44,7 +44,6 @@
                             <button class="btn btn-secondary text-start">Eliminación de cuentas</button>
                             <button class="btn btn-secondary text-start">Copias de seguridad</button>
                         </div>
-                
                         <!-- Registros Dropdown -->
                         <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="records-button">
                             <span class="text-start">Registros</span>
@@ -56,7 +55,6 @@
                             <button class="btn btn-secondary text-start">Detección</button>
                             <button class="btn btn-secondary text-start">Monitoreo</button>
                         </div>
-                
                         <!-- Grupos Dropdown -->
                         <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="groups-button">
                             <span class="text-start">Grupos</span>
@@ -119,7 +117,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content col-md-10">
+            <!-- <div class="content col-md-10">
                 <div class="row mb-4 header-row">
                     <div class="col-12 d-flex">
                         <div class="row w-100">
@@ -273,7 +271,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
