--- a/src/views/views.dispositivos.movil.ejs
+++ b/src/views/views.dispositivos.movil.ejs
@@ -8,7 +8,7 @@
     <!-- icons bootstrap  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- custom style  -->
-    <link rel="stylesheet" href="../css/dispositivos.movil.css">
+    <link rel="stylesheet" href="/css/dispositivos.movil.css">
     <title>Dispositivos moviles</title>
 </head>
 <body class="devices_movil container-fluid h-100">
