--- a/src/views/views.detalles.ejs
+++ b/src/views/views.detalles.ejs
@@ -104,6 +104,30 @@
                             </button>
                         </td>
                     </tr>
+
+                    <tr>
+                        <td>23/08/2024</td>
+                        <td>Windows 10, Chrome</td>
+                        <td>192.168.1.1</td>
+                        <td>Seguro</td>
+                        <td>
+                            <button class="btn-revisado">
+                                Revisado
+                            </button>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>23/08/2024</td>
+                        <td>Windows 10, Chrome</td>
+                        <td>192.168.1.1</td>
+                        <td>Seguro</td>
+                        <td>
+                            <button class="btn-revisado">
+                                Revisado
+                            </button>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <!-- Botón guardar -->
