--- a/src/views/views.historialAcceso.ejs
+++ b/src/views/views.historialAcceso.ejs
@@ -153,7 +153,7 @@
                                             </path>
                                         </g>
                                     </svg>
-                                    <input placeholder="Buscar..." type="search" class="input">
+                                    <input placeholder="Buscar..." type="search" class="input" id="search_invenatry">
                                 </div>
                             </div>
 
@@ -174,28 +174,36 @@
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">IP</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr class="table-active">
-                                <td>1</td>
-                                <td>15-08-2022</td>
-                                <td>10:41:12</td>
-                                <td>Indefinido</td>
+                        <tbody id="data">
+                            <tr class="table-active table-buscar">
+                                <td class="number">1</td>
+                                <td class="fecha">15-08-2022</td>
+                                <td class="horario">10:41:12</td>
+                                <td class="localizacion">Indefinido</td>
                                 <td scope="col"><img src="../img/smartphone.png" class="imgCel" alt="" srcset=""></td>
-                                <td>Safari</td>
-                                <td>192.168.25.1</td>  
+                                <td class="dispositivo">Safari</td>
+                                <td class="ip">192.168.25.1</td>  
                                
                             </tr>
 
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>15-08-2022</td>
-                                <td>09:22:04</td>
-                                <td>Indefinido</td>
+                            <tr class="table-buscar">
+                                <td class="number">2</td>
+                                <td class="fecha">22-11-2005</td>
+                                <td class="horario">09:22:04</td>
+                                <td class="localizacion">Indefinido</td>
                                 <td scope="col"><img src="../img/laptop.png" class="imgCel" alt="" srcset=""></td>
-                                <td>Chrome</td>
-                                <td>203.0.113.42</td>
-                               
+                                <td class="dispositivo">Chrome</td>
+                                <td class="ip">203.0.113.42</td>
+                            </tr>
+
+                            <tr class="table-active table-buscar">
+                                <td class="number">3</td>
+                                <td class="fecha">17-07-2024</td>
+                                <td class="horario">11:02:24</td>
+                                <td class="localizacion">Indefinido</td>
+                                <td scope="col"><img src="../img/smartphone.png" class="imgCel" alt="" srcset=""></td>
+                                <td class="dispositivo">Safari</td>
+                                <td class="ip">182.5.573.34</td>
                             </tr>
 
                            
@@ -249,6 +257,7 @@
         </script>
     
     <script src="/js/botones.js"></script>
+    <script src="/js/historialAcceso.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
