--- a/src/views/views.historialCambios.ejs
+++ b/src/views/views.historialCambios.ejs
@@ -153,7 +153,7 @@
                                             </path>
                                         </g>
                                     </svg>
-                                    <input placeholder="Buscar..." type="search" class="input">
+                                    <input placeholder="Buscar..." type="search" class="input" id="search_invenatry">
                                 </div>
                             </div>
 
@@ -172,36 +172,36 @@
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Estados</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr class="table-active">
-                                <td>1</td>
-                                <td>15-08-2022</td>
-                                <td>10:41:12</td>
-                                <td>Visualizar Accesos</td>
-                                <td>Habilitado</td>
+                        <tbody id="data">
+                            <tr class="table-active table-buscar">
+                                <td class="number">1</td>
+                                <td class="fecha">15-08-2022</td>
+                                <td class="horario">10:41:12</td>
+                                <td class="permisos">Visualizar Accesos</td>
+                                <td class="estado">Habilitado</td>
                             </tr>
 
                             </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>15-08-2022</td>
-                                <td>10:33:44</td>
-                                <td>Lista de bloqueos </td>
-                                <td>Deshabilitado</td>
+                            <tr class="table-buscar">
+                                <td class="number">2</td>
+                                <td class="fecha">29-11-2005</td>
+                                <td class="horario">10:33:44</td>
+                                <td class="permisos">Lista de bloqueos </td>
+                                <td class="estado">Deshabilitado</td>
                             </tr>
-                            <tr class="table-active">
-                                <td>3</td>
-                                <td>22-04-2024</td>
-                                <td>10:33:06</td>
-                                <td>Configurar contraseña</td>
-                                <td>Deshabilitado</td>
+                            <tr class="table-active table-buscar">
+                                <td class="number">3</td>
+                                <td class="fecha">22-04-2024</td>
+                                <td class="horario">10:33:06</td>
+                                <td class="permisos">Configurar contraseña</td>
+                                <td class="estado">Deshabilitado</td>
                             </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>10-02-2022</td>
-                                <td>10:30:16</td>
-                                <td>Configurar usuario</td>
-                                <td>Habilitado</td>
+                            <tr class="table-buscar">
+                                <td class="number">4</td>
+                                <td class="fecha">10-02-2022</td>
+                                <td class="horario">10:30:16</td>
+                                <td class="permisos">Configurar usuario</td>
+                                <td class="estado">Habilitado</td>
                             </tr>
 
                            
@@ -255,6 +255,7 @@
         </script>
     
     <script src="/js/botones.js"></script>
+    <script src="/js/historialCambios.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
