--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -88,7 +88,7 @@ a{
 
 /* ---------------------------------------------------- RESPONSI ---------------------------------------------------------------------------------------------------------------- */
 
-@media (max-width: 1250px) {
+/* @media (max-width: 1250px) {
     .formulario{
         width: 350px;
     }
@@ -158,4 +158,4 @@ a{
         height: 20px;
         width: 20px;
     }
-}
+} */
