Se actualiza la lista de roles

--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -19,7 +19,7 @@
             <input type="password" placeholder="Contraseña">
             <input type="password" placeholder="Confirmar Contraseña">
             <select name="rol" id="listarol" placeholder="Seleccione un rol">
-                <option value="" ></option>
+                <option selected disabled>Seleccione un rol</option>
                 <option value="Administrador">Administrador</option>
                 <option value="Programador">Programador</option>
             </select>
