--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -18,6 +18,7 @@
             <input type="email" placeholder="Correo Electronico">
             <input type="password" placeholder="Contraseña">
             <input type="password" placeholder="Confirmar Contraseña">
+            <!-- Lista de roles -->
             <select name="rol" id="listarol" placeholder="Seleccione un rol">
                 <option selected disabled>Seleccione un rol: </option>
                 <option value="Administrador">Administrador</option>
