fix: Arreglo Estilos registro

--- a/src/public/css/backgroud.form.css
+++ b/src/public/css/backgroud.form.css
@@ -10,4 +10,5 @@ main{
     background-repeat: no-repeat;
     background-color: #151c4180;
     background-blend-mode: soft-light;
+    background-position: center;
 }
