--- a/src/public/css/preguntas_seguridad.css
+++ b/src/public/css/preguntas_seguridad.css
@@ -5,15 +5,163 @@ body {
   background-color: #f2f2f2;
 }
 
-nav {
-  height: 10vh;
+nav{
   background-color: #394DC0;
+  width: 100%;
+  height: 80px;
+}
+.nav__item{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.nav__item > i{
+  font-size: 40px;
+  cursor: pointer;
+  margin: 20px 10px;
   color: white;
-  padding: 1%;
-  text-align: left;
 }
 
-header {
+.caja__notifica{
+  background-color: #43496b;
+  width: 350px;
+  height: 400px;
+  position: absolute;
+  top: 65px;
+  right: 70px;
+  color: white;
+  transition: 0.5s;
+  border-radius: 10px;
+  display: none;
+}
+.noti__head{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid black;
+  padding: 10px;
+}
+.noti__head > p{
+  color: black;
+}
+.noti__main{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 13% 76% 13%;
+}
+.noti__body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.noti__footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid black;
+}
+.active{
+  display: block;
+}
+
+.config{
+  background-color: gray;
+  width: 350px;
+  height: auto;
+  position: absolute;
+  display: none;
+  top: 80px;
+  right: 0px;
+  color: white;
+  border-radius: 0 0 0 15px;
+  transition: 0.5s;
+}
+
+.config__body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+
+}
+.config__body > a{
+  width: auto;
+  min-width: 230px;
+  padding: 10px;
+  background: #b1b1b1;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+  margin-top: 10px;
+  transition: .2s;
+}
+.config__body > a:hover{
+  background: #8d8d8d;
+  transition: .2s;
+}
+.config__body > .cerrarSesion{
+  background: #C90000;
+  transition: .2s;
+}
+.activeC{
+  display: block;
+}
+
+.toggle-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3b5998; 
+  padding: 7px 40px;
+  border-radius: 5px;
+  width: fit-content;
+  margin-bottom: 10px;
+}
+
+.toggle-label {
+  color: white;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.toggle-switch {
+  display: none;
+}
+
+.switch {
+  width: 40px;
+  height: 20px;
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.switch::before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background-color: #3b5998;
+  border-radius: 50%;
+  transition: transform 0.3s;
+}
+
+.toggle-switch:checked + .switch::before {
+  transform: translateX(20px);
+}
+
+.toggle-switch:checked + .switch {
+  background-color: #181a18;
+}
+
+header1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,32 +177,7 @@ input[type="text"] {
   box-sizing: border-box;
 }
 
-nav {
-  height: 20%;
-  background-color: #394DC0;
-  color: white;
-  padding: 1%;
-  display: flex;
-  align-items: center;
-}
-
-nav .image-container {
-  display: flex;
-  gap: 20px;
-  margin-left: auto;
-  /* Esto empuja las imágenes hacia la derecha */
-}
-
-nav .image-container img {
-  width: 30px;
-  /* Ajusta el tamaño de la imagen según sea necesario */
-  cursor: pointer;
-  height: 30px;
-  border-radius: 50%;
-  /* Esto es opcional, si quieres que las imágenes sean circulares */
-}
-
-/* flecha */
+flecha 
 
 .arrow {
   margin-right: 1100px;
