--- a/src/views/views.sesiones.activas.ejs
+++ b/src/views/views.sesiones.activas.ejs
@@ -7,34 +7,41 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/sesiones.activas.css">
 </head>
-<body class="two_factor_container h-100 cuerpo">l
-    <div class="sesiones_activas container-fluid">
-        <h2 class="sesiones_activas_titulo h2 text-light">Sesiones Activas</h2>
+<body class="two_factor_container h-100 cuerpo">
+    <div class="sesiones_activas container-fluid center">
+        <!-- titulo principal  -->
+        <p class="sesiones_activas_titulo fs-1 fw-bold  text-light my-4">Sesiones Activas</p>
 
-        <table class="table sesiones_activas_tabla rounded table1" style="background: #D9D9D9; ">
-            <thead>
-                <tr>
-                    <th scope="col" class="sesiones_activas_encabezado h4 text-primary">N° Sesión</th>
-                    <th scope="col" class="sesiones_activas_encabezado h4 text-primary">Nombre</th>
-                    <th scope="col" class="sesiones_activas_encabezado h4 text-primary">Fecha de Creación</th>
-                    <th scope="col" class="sesiones_activas_encabezado h4 text-primary">Estado</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="sesiones_activas_celda">1</td>
-                    <td class="sesiones_activas_celda">Windows 10, Chrome</td>
-                    <td class="sesiones_activas_celda">23/08/2024</td>
-                    <td class="sesiones_activas_celda">Activo</td>
-                </tr> 
-                <tr> 
-                    <td class="sesiones_activas_celda">2</td>
-                    <td class="sesiones_activas_celda">Windows 10, Chrome</td>
-                    <td class="sesiones_activas_celda">23/08/2024</td>
-                    <td class="sesiones_activas_celda">Activo</td>
-                </tr>
+        <!-- cuadro de información  -->
+        <div class="sesiones_activas_cuadro mt-4" style="width: 70%;">
+
+            <table class="table sesiones_activas_tabla" style="background: #D9D9D9;">
+
+                <thead class="thead1">
+                    <tr>
+                        <th scope="col" class="sesiones_activas_encabezado h5 text-primary">N° Sesión</th>
+                        <th scope="col" class="sesiones_activas_encabezado h5 text-primary">Nombre</th>
+                        <th scope="col" class="sesiones_activas_encabezado h5 text-primary">Fecha de Creación</th>
+                        <th scope="col" class="sesiones_activas_encabezado h5 text-primary">Estado</th>
+                    </tr>
+                </thead>
+                <tbody class="tbody1">
+                    <tr>
+                        <td class="sesiones_activas_celda">1</td>
+                        <td class="sesiones_activas_celda">Windows 10, Chrome</td>
+                        <td class="sesiones_activas_celda">23/08/2024</td>
+                        <td class="sesiones_activas_celda">Activo</td>
+                    </tr> 
+                    <tr> 
+                        <td class="sesiones_activas_celda">2</td>
+                        <td class="sesiones_activas_celda">Windows 10, Chrome</td>
+                        <td class="sesiones_activas_celda">23/08/2024</td>
+                        <td class="sesiones_activas_celda">Activo</td>
+                    </tr>
                 </tbody>
-        </table>
+            </table>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
